<resources>
    <string name="app_name">waterpoloinfo</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Waterpolo Info</string>
    <string name="nav_header_subtitle">A vízilabda mindenek felett.</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_custom">Custom</string>
    <string name="menu_register">Register</string>
    <string name="menu_login">Login</string>

    <string name="registration">Regisztráció</string>
    <string name="user_name">Felhasználónév</string>
    <string name="email_address">E-mail cím</string>
    <string name="password">Jelszó</string>
    <string name="password_again">Jelszó megerősítése</string>
    <string name="editor">Szerkesztő</string>
    <string name="player">Játékos</string>
    <string name="cancel">Mégse</string>
    <string name="login">Bejelentkezés</string>
    <string name="login_as_guest">Folytatás vendégként</string>
    <string name="login_with_google">Bejelentkezés google fiókkal</string>
    <string name="default_web_client_id">111172940739-a893p0bpi8nkv3krebvin31j6jdlnte9.apps.googleusercontent.com</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_edit">Edit</string>
    <string name="edit_page">Editor page</string>
    <string name="create_team">Csapat létrehozása</string>
    <string name="new_team_name">Új csapat neve</string>
    <string name="update_team_name">A csapat új neve</string>
    <string name="update_team_name_button">Csapat nevének megváltoztatása</string>
    <string name="delete_team">Csapat törlése</string>
    <string name="players_to_team_button">Játékos hozzáadása a csapathoz</string>
    <string name="gallery_page">Gallery page</string>
    <string name="menu_profile">Your account</string>
    <string name="home_intro">Üdvözöljük a WaterPoloInfo oldalán!</string>
    <string name="long_intro">Itt tájékozódhat a csapatokról, játékosokról. Ezek mellett folymatosan frissülő képgaléria is található a bajnokságról. Elérhetőségünket a Kapcsolat menüpontban találja. A csapatok és játékosok kihirdetése folyamatban.</string>

    <string-array name="options">
        <item>item1</item>
        <item>item2</item>
    </string-array>



</resources>