<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_login"
            android:icon="@drawable/baseline_login_24"
            android:title="@string/menu_login" />
        <item
            android:id="@+id/nav_register"
            android:icon="@drawable/baseline_app_registration_24"
            android:title="@string/menu_register" />

        <item
            android:id="@+id/nav_edit"
            android:icon="@drawable/baseline_edit_24"
            android:title="@string/menu_edit"/>

        <item
            android:id="@+id/nav_custom"
            android:icon="@drawable/baseline_info_outline_24"
            android:title="@string/menu_custom" />

        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/baseline_logout_24"
            android:title="@string/menu_logout"
            android:onClick="logout"/>

        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/baseline_account_circle_24"
            android:title="@string/menu_profile" />
    </group>
</menu>