<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.edit.EditFragment">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/editTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="@dimen/default_margin"
            android:layout_marginBottom="@dimen/edit_margin"
            android:text="@string/edit_page"
            android:textAlignment="center"
            android:textSize="24sp" />


        <TextView
            android:id="@+id/ceateTeamTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/editTextView"
            android:layout_marginTop="@dimen/default_margin"
            android:text="Csapat létrehozása"
            android:textAlignment="center"
            android:textSize="18sp"/>

        <EditText
            android:id="@+id/createTeamEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/ceateTeamTextView"
            android:ems="10"
            android:hint="@string/new_team_name"
            android:inputType="textPersonName"
            android:layout_marginLeft="@dimen/default_margin"
            android:layout_marginTop="@dimen/default_margin"
            android:layout_marginRight="@dimen/default_margin"/>

        <LinearLayout
            android:id="@+id/createTeamLinear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@id/createTeamEditText"
            android:layout_marginTop="@dimen/default_margin"
            android:layout_marginBottom="@dimen/edit_margin"
            android:layout_centerHorizontal="true">

            <Button
                android:id="@+id/createTeamButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create_team" />

        </LinearLayout>


        <TextView
            android:id="@+id/deleteTeamTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/createTeamLinear"
            android:layout_marginTop="@dimen/default_margin"
            android:text="Csapat törlése"
            android:textAlignment="center"
            android:textSize="18sp"/>

        <Spinner
            android:id="@+id/deleteTeamssSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/deleteTeamTextView"
            android:layout_marginLeft="@dimen/default_margin"
            android:layout_marginTop="@dimen/default_margin"
            android:layout_marginRight="@dimen/default_margin"/>


        <LinearLayout
            android:id="@+id/deleteTeamLinear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@id/deleteTeamssSpinner"
            android:layout_marginTop="@dimen/default_margin"
            android:layout_marginBottom="@dimen/edit_margin"
            android:layout_centerHorizontal="true">

            <Button
                android:id="@+id/deleteTeamButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/delete_team" />

        </LinearLayout>


        <TextView
            android:id="@+id/updateTeamNameTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/deleteTeamLinear"
            android:layout_marginTop="@dimen/default_margin"
            android:text="Csapat nevének megváltoztatása"
            android:textAlignment="center"
            android:textSize="18sp"/>

        <Spinner
            android:id="@+id/teamsSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/updateTeamNameTextView"
            android:layout_marginLeft="@dimen/default_margin"
            android:layout_marginTop="@dimen/default_margin"
            android:layout_marginRight="@dimen/default_margin"/>

        <EditText
            android:id="@+id/updateTeamNameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/teamsSpinner"
            android:ems="10"
            android:hint="@string/update_team_name"
            android:inputType="textPersonName"
            android:layout_marginLeft="@dimen/default_margin"
            android:layout_marginTop="@dimen/default_margin"
            android:layout_marginRight="@dimen/default_margin"/>

        <LinearLayout
            android:id="@+id/updateNameTeamLinear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@id/updateTeamNameEditText"
            android:layout_marginTop="@dimen/default_margin"
            android:layout_marginBottom="@dimen/edit_margin"
            android:layout_centerHorizontal="true">

            <Button
                android:id="@+id/updateTeamNameButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/update_team_name_button" />

        </LinearLayout>

        <TextView
            android:id="@+id/editPlayerSpinnerTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/updateNameTeamLinear"
            android:layout_marginTop="@dimen/default_margin"
            android:text="Játékosok hozzáadása egy csapathoz"
            android:textAlignment="center"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/playerToTeamTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/editPlayerSpinnerTextView"
            android:layout_marginTop="@dimen/default_margin"
            android:text="Játékosok listázása"
            android:textAlignment="center"
            android:textSize="18sp"/>

        <Spinner
            android:id="@+id/playersSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/playerToTeamTextView"
            android:layout_marginLeft="@dimen/default_margin"
            android:layout_marginTop="@dimen/default_margin"
            android:layout_marginRight="@dimen/default_margin"/>

        <TextView
            android:id="@+id/playerToTeamListTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/playersSpinner"
            android:layout_marginTop="@dimen/default_margin"
            android:text="Csapat kiválasztása"
            android:textAlignment="center"
            android:textSize="18sp"/>

        <Spinner
            android:id="@+id/playersToTeamSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/playerToTeamListTextView"
            android:layout_marginLeft="@dimen/default_margin"
            android:layout_marginTop="@dimen/default_margin"
            android:layout_marginRight="@dimen/default_margin"/>

        <LinearLayout
            android:id="@+id/playersToTeamLinear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@id/playersToTeamSpinner"
            android:layout_marginTop="@dimen/default_margin"
            android:layout_marginBottom="@dimen/edit_margin"
            android:layout_centerHorizontal="true">

            <Button
                android:id="@+id/playerToTeamButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/players_to_team_button" />

        </LinearLayout>

    </RelativeLayout>

</ScrollView>

